--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -37,6 +37,26 @@ button {
 }
 
 button:hover {
-  background: linear-gradient(217deg, rgba(34, 163, 224, 1) 21%, rgba(65, 190, 184, 1) 100%);
   color: #e9fadd;
+  background: linear-gradient(45deg, rgba(34, 163, 224, 1) 21%, rgba(65, 190, 184, 1));
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  border: 5px solid #cfd1d8;
+  box-shadow: inset 0 0 5px 5px #e9fadd;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #c8c6a7, #999, #51c4d3);
+  border-radius: 5px;
+  height: 30%;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #999, #c8c6a7, #51c4d3);
 }
